--- a/client/src/app/features/todo/todo.css
+++ b/client/src/app/features/todo/todo.css
@@ -4,10 +4,18 @@
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.todo-container h2 {
+.app-title {
   text-align: center;
+  margin-bottom: 0.25rem;
+  color:  #4a90e2;
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+.title-divider {
+  border: none;
+  border-top: 2px solid #ddd;
   margin-bottom: 2rem;
-  color: #333;
 }
 
 .todo-content {
@@ -15,9 +23,43 @@
   gap: 2rem;
 }
 
-/* Left form styles */
+.left-panel,
+.right-panel {
+  display: flex;
+  flex-direction: column;
+}
+
+.left-panel {
+  flex: 0 0 30%;
+  position: relative;
+  padding-right: 3.0rem;
+}
+
+
+.right-panel {
+  flex: 1;
+}
+
+.left-panel h2,
+.right-panel h2 {
+  margin: 0 0 1rem 0;
+  padding: 0;
+  text-align: center;
+  width: 100%;
+  color: #4a90e2;
+}
+
+.left-panel::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background-color: #ddd;
+}
+
 .todo-form {
-  flex: 1 1 300px;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -28,8 +70,9 @@
   color: #444;
 }
 
-.todo-form input[type="text"],
+.todo-form input[type='text'],
 .todo-form textarea {
+  width: 100%;
   padding: 0.6rem;
   font-size: 1rem;
   border: 1.5px solid #ccc;
@@ -54,12 +97,10 @@
 }
 
 .todo-form button:hover {
-  background-color: #357ABD;
+  background-color: #357abd;
 }
 
-/* Right list styles */
 .todo-list {
-  flex: 2 1 400px;
   list-style: none;
   padding: 0;
   margin: 0;
