--- a/client/src/app/features/todo/todo.html
+++ b/client/src/app/features/todo/todo.html
@@ -2,6 +2,17 @@
   <h1 class="app-title">TODO List App</h1>
   <hr class="title-divider" />
 
+<div
+  class="toast-growl"
+  *ngIf="showToast"
+  role="alert"
+  aria-live="assertive"
+  aria-atomic="true"
+>
+  {{ toastMessage }}
+</div>
+
+
 
   <div class="todo-content">
     <div class="left-panel">
