--- a/client/src/app/features/todo/todo.css
+++ b/client/src/app/features/todo/todo.css
@@ -55,6 +55,7 @@
   flex: 0 0 30%;
   position: relative;
   padding-right: 3.0rem;
+  margin-top: 7rem; 
 }
 
 
@@ -84,7 +85,7 @@
 .todo-form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1rem;  
 }
 
 .todo-form label {
@@ -108,7 +109,6 @@
 }
 
 .todo-form button {
-  align-self: flex-start;
   padding: 0.5rem 1.2rem;
   background-color: #4a90e2;
   color: white;
@@ -116,6 +116,7 @@
   border-radius: 4px;
   cursor: pointer;
   font-size: 1rem;
+   align-self: flex-end; 
 }
 
 .todo-form button:hover {
