--- a/client/src/app/features/todo/todo.html
+++ b/client/src/app/features/todo/todo.html
@@ -64,7 +64,7 @@
             </div>
           </div>
           <button type="button" (click)="deleteTask(i)" aria-label="Delete task">
-            Delete
+                <i class="fa fa-trash"></i>
           </button>
         </li>
       </ul>
